--- a/portal-frontend/src/app/features/notifications/edit-submission/other-attachments/other-attachments.component.html
+++ b/portal-frontend/src/app/features/notifications/edit-submission/other-attachments/other-attachments.component.html
@@ -56,6 +56,7 @@
                 type="text"
                 matInput
                 placeholder="Type description"
+                aria-label="Attachment description"
               />
             </mat-form-field>
             <div
