--- a/portal-frontend/src/app/features/notifications/edit-submission/proposal/proposal.component.html
+++ b/portal-frontend/src/app/features/notifications/edit-submission/proposal/proposal.component.html
@@ -67,7 +67,7 @@
     </div>
 
     <div class="full-row">
-      <label class="subheading2" for="proposal-map">Upload Terms of the SRW</label>
+      <mat-label class="subheading2" for="proposal-map">Upload Terms of the SRW</mat-label>
       <div class="subtext">The signed and finalized terms that are to be included in the SRW package to LTSA</div>
       <app-file-drag-drop
         id="proposal-map"
@@ -82,7 +82,7 @@
     </div>
 
     <div class="full-row">
-      <label for="hasSurveyPlan"> Is there a survey plan associated with the SRW? </label>
+      <mat-label for="hasSurveyPlan"> Is there a survey plan associated with the SRW? </mat-label>
       <div>
         <mat-button-toggle-group
           class="input"
@@ -111,7 +111,7 @@
     </div>
 
     <div class="full-row">
-      <label class="subheading2" for="surveyPlans">Upload Survey Plan(s)</label>
+      <mat-label class="subheading2" for="surveyPlans">Upload Survey Plan(s)</mat-label>
       <app-file-drag-drop
         id="surveyPlans"
         [uploadedFiles]="[]"
