--- a/portal-frontend/src/app/features/notifications/edit-submission/proposal/proposal.component.scss
+++ b/portal-frontend/src/app/features/notifications/edit-submission/proposal/proposal.component.scss
@@ -6,7 +6,7 @@ section {
 }
 
 .no-data-text {
-  color: colors.$grey;
+  color: colors.$grey-dark;
   text-align: center;
   padding-top: rem(16);
 }
