--- a/portal-frontend/src/app/features/notifications/notification-details/notification-details.component.html
+++ b/portal-frontend/src/app/features/notifications/notification-details/notification-details.component.html
@@ -1,3 +1,4 @@
+<h2 *ngIf="showEdit" class="page-title">Review & Submit</h2>
 <section>
   <app-parcel
     [$notificationSubmission]="$notificationSubmission"
