--- a/portal-frontend/src/app/features/applications/application-details/application-details.component.html
+++ b/portal-frontend/src/app/features/applications/application-details/application-details.component.html
@@ -1,5 +1,4 @@
-<h2 class="page-title">Review & Submit</h2>
-
+<h2 *ngIf="showEdit" class="page-title">Review & Submit</h2>
 <section>
   <app-parcel
     [draftMode]="draftMode"
