--- a/portal-frontend/src/app/features/notice-of-intents/edit-submission/other-attachments/other-attachments.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/edit-submission/other-attachments/other-attachments.component.html
@@ -51,6 +51,7 @@
                 type="text"
                 matInput
                 placeholder="Type description"
+                aria-label="Attachment description"
               />
             </mat-form-field>
             <div
