--- a/portal-frontend/src/app/features/notice-of-intents/edit-submission/primary-contact/primary-contact.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/edit-submission/primary-contact/primary-contact.component.html
@@ -116,7 +116,7 @@
           </div>
         </div>
         <div>
-          <label for="firstName">Email</label>
+          <label for="email">Email</label>
           <mat-form-field appearance="outline">
             <input id="email" type="email" matInput placeholder="Enter Email" formControlName="email" />
           </mat-form-field>
