--- a/portal-frontend/src/app/features/notice-of-intents/edit-submission/proposal/roso/roso-proposal.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/edit-submission/proposal/roso/roso-proposal.component.html
@@ -25,9 +25,9 @@
 <form [formGroup]="form">
   <div class="form-row">
     <div class="full-row">
-      <label for="noi-follow-up">
+      <mat-label for="noi-follow-up">
         Has the ALC previously received an application or Notice of Intent for this proposal?
-      </label>
+      </mat-label>
       <div class="subtext">If yes, provide the ALC Application or Notice of Intent ID in the field below</div>
       <div>
         <mat-button-toggle-group
@@ -110,7 +110,7 @@
       <div class="subtext">Characters left: {{ 4000 - soilTypeRemovedText.textLength }}</div>
     </div>
     <div class="full-row">
-      <label>Proposal Dimensions</label>
+      <mat-label>Proposal Dimensions</mat-label>
       <div class="subtext">
         Please provide accurate numbers that align with your cross sections, reclamation plan, and site plan. The
         Commission will consider your proposal dimensions when determining the potential impact it will have on the
@@ -124,9 +124,9 @@
       ></app-soil-table>
     </div>
     <div class="full-row">
-      <label
+      <mat-label
         >Of the proposed totals provided above, please input the dimensions of soil that has already been
-        removed.</label
+        removed.</mat-label
       >
       <div class="subtext">If no proposed soil has already been removed, please leave 0 in the fields below</div>
       <app-soil-table
@@ -141,7 +141,7 @@
       <div class="subtext">Estimated duration of the project</div>
       <div class="form-row">
         <div>
-          <label for="projectDurationUnit">Duration</label>
+          <mat-label for="projectDurationUnit">Duration</mat-label>
           <div class="subtext">Days, Months, or Years</div>
           <mat-form-field appearance="outline">
             <mat-select placeholder="Select one" id="projectDurationUnit" formControlName="projectDurationUnit">
@@ -185,7 +185,7 @@
     </section>
 
     <div class="full-row">
-      <label class="subheading2" for="proposal-map">Proposal Map / Site Plan</label>
+      <mat-label class="subheading2" for="proposal-map">Proposal Map / Site Plan</mat-label>
       <div class="subtext">A visual representation of your proposal.</div>
       <app-file-drag-drop
         id="proposal-map"
@@ -200,7 +200,9 @@
     </div>
 
     <div class="full-row">
-      <label for="noi-follow-up"> Is your proposal for aggregate extraction or placer mining? </label>
+      <mat-label for="noi-extraction-or-mining">
+        Is your proposal for aggregate extraction or placer mining?
+      </mat-label>
       <div>
         <mat-button-toggle-group
           class="input"
@@ -231,7 +233,7 @@
     </div>
 
     <div class="full-row">
-      <label class="subheading2" for="cross-section">Cross Sections</label>
+      <mat-label class="subheading2" for="cross-section">Cross Sections</mat-label>
       <div class="subtext">Include North-South and East-West cross sections</div>
       <app-info-banner>
         Please refer to <a>FIXME: Removal of Soil</a> on the ALC website for more information
@@ -250,7 +252,7 @@
       ></app-file-drag-drop>
     </div>
     <div class="full-row">
-      <label class="subheading2" for="reclamation-plan">Reclamation Plan</label>
+      <mat-label class="subheading2" for="reclamation-plan">Reclamation Plan</mat-label>
       <div class="subtext">
         The Reclamation Plan should be completed by a qualified Professional Agrologist and contain the area's
         agricultural capability assessment.
@@ -273,9 +275,9 @@
     </div>
 
     <div class="full-row">
-      <label for="hasSubmittedNotice">
+      <mat-label for="hasSubmittedNotice">
         Have you submitted a Notice of Work to the Ministry of Energy, Mines and Low Carbon Innovation (EMLI)?
-      </label>
+      </mat-label>
       <div class="subtext">If yes, please attach the Notice of Work in the section below.</div>
       <div>
         <mat-button-toggle-group
@@ -305,7 +307,7 @@
     </div>
 
     <div class="full-row">
-      <label class="subheading2" for="noticeOfWork">Notice of Work</label>
+      <mat-label class="subheading2" for="noticeOfWork">Notice of Work</mat-label>
       <app-info-banner>
         Please refer to <a>FIXME: Removal of Soil</a> on the ALC website for more information
       </app-info-banner>
