--- a/portal-frontend/src/app/features/notifications/edit-submission/transferees/transferee-dialog/transferee-dialog.component.html
+++ b/portal-frontend/src/app/features/notifications/edit-submission/transferees/transferee-dialog/transferee-dialog.component.html
@@ -6,7 +6,7 @@
   <form [formGroup]="form">
     <div class="form-row">
       <div class="full-row">
-        <label for="type">Transferee Type</label>
+        <mat-label for="type">Transferee Type</mat-label>
         <mat-button-toggle-group (change)="onChangeType($event)" class="input" id="type" formControlName="type">
           <mat-button-toggle color="primary" [value]="OWNER_TYPE.INDIVIDUAL">Individual</mat-button-toggle>
           <mat-button-toggle color="primary" [value]="OWNER_TYPE.ORGANIZATION">Organization</mat-button-toggle>
@@ -64,7 +64,7 @@
         </div>
       </div>
       <div>
-        <label for="firstName">Email</label>
+        <label for="email">Email</label>
         <mat-form-field appearance="outline">
           <input id="email" type="email" matInput placeholder="Enter Email" formControlName="email" />
         </mat-form-field>
@@ -79,10 +79,6 @@
 </div>
 <div mat-dialog-actions class="actions">
   <button mat-stroked-button color="primary" (click)="onClose()">Cancel</button>
-  <button mat-flat-button color="primary" [disabled]="isLoading" *ngIf="!isEdit" (click)="onCreate()">
-    Add
-  </button>
-  <button mat-flat-button color="primary" [disabled]="isLoading" *ngIf="isEdit" (click)="onSave()">
-    Save
-  </button>
+  <button mat-flat-button color="primary" [disabled]="isLoading" *ngIf="!isEdit" (click)="onCreate()">Add</button>
+  <button mat-flat-button color="primary" [disabled]="isLoading" *ngIf="isEdit" (click)="onSave()">Save</button>
 </div>
