Reorganize headings in public and applicant view

--- a/portal-frontend/src/app/features/applications/edit-submission/proposal/subd-proposal/subd-proposal.component.html
+++ b/portal-frontend/src/app/features/applications/edit-submission/proposal/subd-proposal/subd-proposal.component.html
@@ -110,6 +110,7 @@
                   placeholder="Type size in hectares"
                   [formControlName]="i + '-size'"
                   (change)="onChangeLotSize(i, $event)"
+                  aria-label="Size in hectares"
                 />
                 <span *ngIf="element.size" matTextSuffix>ha</span>
               </mat-form-field>
