--- a/portal-frontend/src/app/features/public/application/submission/roso-details/roso-details.component.html
+++ b/portal-frontend/src/app/features/public/application/submission/roso-details/roso-details.component.html
@@ -76,9 +76,8 @@
     </div>
   </div>
 
-  <div class="full-width">
-    <span class="subheading1">Project Duration</span>
-  </div>
+  <div class="grid-1"></div>
+  <div class="subheading2 grid-double">Project Duration</div>
   <div class="subheading2 grid-1">Duration</div>
   <div class="grid-double">
     {{ applicationSubmission.soilProjectDurationUnit }}
