--- a/portal-frontend/src/app/features/public/application/submission/subd-details/subd-details.component.scss
+++ b/portal-frontend/src/app/features/public/application/submission/subd-details/subd-details.component.scss
@@ -1,4 +1,4 @@
-@use '../../../../../../styles/functions.scss' as *;
+@use '../../../../../../styles/functions' as *;
 
 .parcel-table {
   display: grid;
