--- a/portal-frontend/src/app/features/public/notice-of-intent/submission/pofo-details/pofo-details.component.html
+++ b/portal-frontend/src/app/features/public/notice-of-intent/submission/pofo-details/pofo-details.component.html
@@ -84,9 +84,8 @@
     <app-no-data *ngIf="noiSubmission.soilAlreadyPlacedAverageDepth === null"></app-no-data>
   </div>
 
-  <div class="full-width">
-    <h4>Project Duration</h4>
-  </div>
+  <div class="grid-1"></div>
+  <div class="subheading2 grid-double">Project Duration</div>
   <div class="subheading2 grid-1">Duration</div>
   <div class="grid-double">
     {{ noiSubmission.soilProjectDurationUnit }}
