--- a/portal-frontend/src/app/features/applications/view-submission/view-application-submission.component.html
+++ b/portal-frontend/src/app/features/applications/view-submission/view-application-submission.component.html
@@ -125,7 +125,10 @@
   <button (click)="onReview(application.fileNumber)" mat-button>
     <div>
       <span
-        *ngIf="application.status.code === SUBMISSION_STATUS.IN_REVIEW_BY_LG"
+        *ngIf="
+          application.status.code === SUBMISSION_STATUS.IN_REVIEW_BY_LG ||
+          application.status.code === SUBMISSION_STATUS.RETURNED_TO_LG
+        "
         (click)="onReview(application.fileNumber)"
         class="subheading2"
         >Continue Application Review</span
