--- a/portal-frontend/src/app/features/applications/view-submission/view-application-submission.component.scss
+++ b/portal-frontend/src/app/features/applications/view-submission/view-application-submission.component.scss
@@ -51,6 +51,20 @@
       }
     }
   }
+
+  .comment-container {
+    align-items: flex-start;
+    background-color: rgba(colors.$accent-color-light, 0.5);
+    border-radius: rem(4);
+    display: flex;
+    flex-direction: column;
+    margin-bottom: rem(24);
+    padding: rem(16);
+
+    div {
+      margin-bottom: rem(4);
+    }
+  }
 }
 
 .absolute {
