--- a/alcs-frontend/src/app/features/application/lfng-info/lfng-info.component.scss
+++ b/alcs-frontend/src/app/features/application/lfng-info/lfng-info.component.scss
@@ -1,7 +1,7 @@
 @use '../../../../styles/colors';
 
-h3 {
-  margin-bottom: 16px !important;
+.header {
+  margin-bottom: 42px;
 }
 
 h4 {
@@ -27,6 +27,7 @@ h4 {
   display: flex;
   flex-direction: column;
   padding: 16px;
+  margin-bottom: 24px;
 
   div {
     margin-bottom: 4px;
