--- a/portal-frontend/src/app/features/public/application/submission/nfu-details/nfu-details.component.scss
+++ b/portal-frontend/src/app/features/public/application/submission/nfu-details/nfu-details.component.scss
@@ -5,7 +5,7 @@
   overflow-x: auto;
   grid-column-gap: rem(36);
   grid-row-gap: rem(12);
-  grid-template-columns: max-content max-content max-content;
+  grid-template-columns: max-content max-content;
 
   @media screen and (min-width: $tabletBreakpoint) {
     grid-template-columns: 0.55fr 1fr;
