--- a/portal-frontend/src/app/features/public/application/submission/nfu-details/nfu-details.component.html
+++ b/portal-frontend/src/app/features/public/application/submission/nfu-details/nfu-details.component.html
@@ -52,6 +52,25 @@
       {{ applicationSubmission.nfuFillOriginDescription }}
       <app-no-data *ngIf="!applicationSubmission.nfuFillOriginDescription"></app-no-data>
     </div>
+
+    <div class="subheading2 grid-1">Project Duration</div>
+    <div class="grid-double">
+      <div *ngIf="applicationSubmission.soilProjectDurationAmount && applicationSubmission.soilProjectDurationUnit">
+        {{ applicationSubmission.soilProjectDurationAmount }}
+        <ng-container [ngPlural]="applicationSubmission.soilProjectDurationAmount">
+          <ng-template ngPluralCase="=1">
+            {{ applicationSubmission.soilProjectDurationUnit.slice(0, -1) | titlecase }}
+          </ng-template>
+          <ng-template ngPluralCase="other">
+            {{ applicationSubmission.soilProjectDurationUnit | titlecase }}
+          </ng-template>
+        </ng-container>
+      </div>
+      <app-no-data
+        *ngIf="!applicationSubmission.soilProjectDurationAmount || !applicationSubmission.soilProjectDurationUnit"
+      ></app-no-data>
+    </div>
+
     <div class="grid-1"></div>
     <div class="subheading2 grid-double">Fill to be Placed</div>
 
@@ -82,18 +101,6 @@
       <app-no-data
         *ngIf="applicationSubmission.nfuAverageFillDepth === null"
       ></app-no-data>
-    </div>
-    <div class="grid-1"></div>
-    <div class="subheading2 grid-double">Project Duration</div>
-    <div class="subheading2 grid-1">Duration</div>
-    <div class="grid-double">
-      {{ applicationSubmission.nfuProjectDurationUnit }}
-      <app-no-data *ngIf="!applicationSubmission.nfuProjectDurationUnit"></app-no-data>
-    </div>
-    <div class="subheading2 grid-1">Length</div>
-    <div class="grid-double">
-      {{ applicationSubmission.nfuProjectDurationAmount }}
-      <app-no-data *ngIf="!applicationSubmission.nfuProjectDurationAmount"></app-no-data>
     </div>
   </ng-container>
 </div>
